lxqt-sudo: lxsu & lxsudo symlinks for lxqt-sudo
Now default backend (sudo/su) is based on the invoked command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ find_package(lxqt REQUIRED QUIET)
 include(LXQtCompilerSettings NO_POLICY_SCOPE)
 include(LXQtTranslate)
 
+set ( LINK_LXSU "lxsu")
+set ( LINK_LXSUDO "lxsudo")
+
 set ( HDRS
     passworddialog.h
 )
@@ -66,7 +69,21 @@ target_compile_definitions(lxqt-sudo
     PRIVATE "LXQTSUDO_SUDO=\"sudo\""
     PRIVATE "LXQTSUDO_SU=\"su\""
     PRIVATE "LXQTSUDO=\"lxqt-sudo\""
+    PRIVATE "LXQTSUDO_LXSU=\"${LINK_LXSU}\""
+    PRIVATE "LXQTSUDO_LXSUDO=\"${LINK_LXSUDO}\""
     PRIVATE "LXQT_VERSION=\"${LXQT_VERSION}\""
+)
+
+add_custom_command(TARGET lxqt-sudo POST_BUILD
+    COMMAND ln -f -s lxqt-sudo "${LINK_LXSU}"
+    WORKING_DIRECTORY .
+    COMMENT "Creating ${LINK_LXSU} symlink"
+)
+
+add_custom_command(TARGET lxqt-sudo POST_BUILD
+    COMMAND ln -f -s lxqt-sudo "${LINK_LXSUDO}"
+    WORKING_DIRECTORY .
+    COMMENT "Creating ${LINK_LXSUDO} symlink"
 )
 
 install(TARGETS
@@ -75,12 +92,17 @@ install(TARGETS
     COMPONENT Runtime
 )
 install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/${LINK_LXSU}" "${CMAKE_CURRENT_BINARY_DIR}/${LINK_LXSUDO}"
+    DESTINATION "${CMAKE_INSTALL_BINDIR}"
+    COMPONENT Runtime
+)
+install(FILES
     ${DESKTOP_FILES}
     DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/applications"
     COMPONENT Runtime
 )
 install(FILES
-    man/lxqt-sudo.1
+    man/lxqt-sudo.1 "man/${LINK_LXSU}.1" "man/${LINK_LXSUDO}.1"
     DESTINATION "${CMAKE_INSTALL_MANDIR}/man1"
     COMPONENT Runtime
 )
