Adapt to external translations
PULL_TRANSLATIONS AND CLEAN_TRANSLATIONS are CMake options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ lxqt_translate_ts(QM_FILES
     ${UIS}
     INSTALL_DIR
     "${LXQT_TRANSLATIONS_DIR}/${PROJECT_NAME}"
+    PULL_TRANSLATIONS ${PULL_TRANSLATIONS}
+    CLEAN_TRANSLATIONS ${CLEAN_TRANSLATIONS}
 )
 
 lxqt_app_translation_loader(SRCS ${PROJECT_NAME})
