build: Forward translations parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ lxqt_translate_ts(QM_FILES
     "${LXQT_TRANSLATIONS_DIR}/${PROJECT_NAME}"
     PULL_TRANSLATIONS ${PULL_TRANSLATIONS}
     CLEAN_TRANSLATIONS ${CLEAN_TRANSLATIONS}
+    TRANSLATIONS_REPO ${TRANSLATIONS_REPO}
+    TRANSLATIONS_REFSPEC ${TRANSLATIONS_REFSPEC}
 )
 
 lxqt_app_translation_loader(SRCS ${PROJECT_NAME})
